# metasonic

./: .gitignore  Cargo.toml  README.md
src/: file.rs  lib.rs  main.rs
src/block/: mod.rs  stream_info.rs  vorbis_comment.rs
test_assets/: invalid.flac
